fix: Center align form at 1200

--- a/css/style.css
+++ b/css/style.css
@@ -626,6 +626,10 @@ textarea {
     padding: 10px;
   }
 
+  .form-container {
+    top: 41%;
+  }
+
   .contact-form {
     /* height: 100%; */
   }
